--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2 year Anniversary :)</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="heart.css">
     <link rel="stylesheet" type="text/css" href="date.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
@@ -31,11 +30,11 @@
 
     <!-- Container for Origami SVGs -->
     <div id="origami-container">
-        <img class="origami" src="panda.svg" alt="Origami Panda">
-        <img class="origami" src="sammy.svg" alt="Origami Cat">
-        <img class="origami" src="swan.svg" alt="Origami Swan">
-        <img class="origami" src="fox.svg" alt="Origami Fox">
-        <img class="origami" src="squirrel.svg" alt="Origami Squirrel">
+        <img class="origami" src="public/panda.svg" alt="Origami Panda">
+        <img class="origami" src="public/sammy.svg" alt="Origami Cat">
+        <img class="origami" src="public/swan.svg" alt="Origami Swan">
+        <img class="origami" src="public/fox.svg" alt="Origami Fox">
+        <img class="origami" src="public/squirrel.svg" alt="Origami Squirrel">
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
@@ -43,6 +42,7 @@
     <script src="origami.js"></script>
     <script src="heart.js"></script>
     <script src="date.js"></script>
+    <script src="stars.js"></script>
 
 </body>
 </html>
