--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/Draggable.min.js"></script>
-    <script src="origami.js"></script>
     <script src="heart.js"></script>
     <script src="date.js"></script>
-    <script src="stars.js"></script>
+    <script src="snowOrigami.js"></script>
 
 </body>
 </html>
