added more detailed origami

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     <!-- Container for Origami SVGs -->
     <div id="origami-container">
-        <img class="origami" src="public/panda.svg" alt="Origami Panda">
-        <img class="origami" src="public/sammy.svg" alt="Origami Cat">
-        <img class="origami" src="public/swan.svg" alt="Origami Swan">
-        <img class="origami" src="public/fox.svg" alt="Origami Fox">
-        <img class="origami" src="public/squirrel.svg" alt="Origami Squirrel">
+        <img class="origami" src="public/happypanda.png" alt="Origami Panda">
+        <img class="origami" src="public/miki.png" alt="Origami Cat">
+        <img class="origami" src="public/sammy.png" alt="Origami Swan">
+        <img class="origami" src="public/wally.png" alt="Origami Fox">
+        <img class="origami" src="public/fox.png" alt="Origami Squirrel">
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
