--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             <b id="m"></b> Minutes and
             <b id="s"></b> Seconds!
         </div>
+
+        <!-- Gallery Container -->
+        <div id="gallery-container">
+            <div class="gallery">
+                <img src="public/gallery/hugCat.jpg" alt="Image 1" class="gallery-image" />
+                <img src="public/gallery/dinner.jpg" alt="Image 2" class="gallery-image" />
+                <img src="public/gallery/monadnock.jpg" alt="Image 3" class="gallery-image" />
+                <!-- Add more images as needed -->
+            </div>
+            <button id="prev">Prev</button>
+            <button id="next">Next</button>
+        </div>
     </div>
 
     <!-- Canvas for Heart Animation -->
@@ -30,11 +42,11 @@
 
     <!-- Container for Origami SVGs -->
     <div id="origami-container">
-        <img class="origami" src="public/happypanda.png" alt="Origami Panda">
-        <img class="origami" src="public/miki.png" alt="Origami Cat">
-        <img class="origami" src="public/sammy.png" alt="Origami Swan">
-        <img class="origami" src="public/wally.png" alt="Origami Fox">
-        <img class="origami" src="public/fox.png" alt="Origami Squirrel">
+        <img class="origami" src="public/png/happypanda.png" alt="Origami Panda">
+        <img class="origami" src="public/png/miki.png" alt="Origami Cat">
+        <img class="origami" src="public/png/sammy.png" alt="Origami Swan">
+        <img class="origami" src="public/png/wally.png" alt="Origami Fox">
+        <img class="origami" src="public/png/fox.png" alt="Origami Squirrel">
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
