--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 </head>
 <body>
-
+    <a href="dist/fireworks.html">
+        <button id="fireworksButton" class="carousel__button">Fireworks!</button>
+    </a>
+      
     <div id="content">
         <h2 id="together">小兔子 We have been together for</h2>
         <div id="timer">
